--- a/src/main/resources/com/fitness/fragment/employee/employee.fxml
+++ b/src/main/resources/com/fitness/fragment/employee/employee.fxml
@@ -1,13 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<fx:root type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
+<fx:root type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="250.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="250.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="250.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <Label styleClass="header1" text="Աշխատողներ" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+        <GridPane.margin>
+            <Insets bottom="10.0" />
+        </GridPane.margin>
+    </Label>
+    <Button fx:id="editButton" mnemonicParsing="false" styleClass="secondary" text="Փոփոխել" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+    <Button fx:id="deleteButton" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+    <Button fx:id="registerButton" mnemonicParsing="false" styleClass="primary" text="Գրանցել" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+    <TableView fx:id="employeesTable" editable="true" fixedCellSize="0.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+        <columns>
+            <TableColumn fx:id="positionColumn" minWidth="-Infinity" prefWidth="50.0" text="Հաստիք" />
+            <TableColumn fx:id="fullNameColumn" minWidth="136.0" prefWidth="172.0" text="Անուն Ազգանուն" />
+            <TableColumn fx:id="phoneColumn" minWidth="-Infinity" prefWidth="116.0" text="Հեռ." />
+            <TableColumn fx:id="phone2Column" minWidth="-Infinity" text="Հեռ. 2֊րդ" />
+            <TableColumn fx:id="addressColumn" minWidth="-Infinity" prefWidth="166.0" text="Հասցե" />
+        </columns>
+        <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+        </columnResizePolicy>
+        <GridPane.margin>
+            <Insets bottom="10.0" top="10.0" />
+        </GridPane.margin>
+    </TableView>
+    <stylesheets>
+        <URL value="@../../style/labels.css" />
+        <URL value="@../../style/button.css" />
+    </stylesheets>
 </fx:root>
