--- a/src/main/resources/com/fitness/fragment/settings.fxml
+++ b/src/main/resources/com/fitness/fragment/settings.fxml
@@ -6,9 +6,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.fitness.fragment.Settings"
-            prefHeight="400.0" prefWidth="600.0" >
+<fx:root type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx"
+         xmlns:fx="http://javafx.com/fxml"
+         prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+</fx:root>
