--- a/src/main/resources/com/fitness/style/text_field.css
+++ b/src/main/resources/com/fitness/style/text_field.css
@@ -1,4 +1,6 @@
 .textField {
     -fx-border-width: 1px;
+    -fx-border-color: #367bf5;
+    -fx-border-radius: 5px;
     -fx-background-color: transparent;
 }
